5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1808_2584.log
== TEST (2019-06-27 20:35:24) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
h = 0
for i in range(n):
	h = h + ((-1)**i)*(1/(1+i))
print(h)	
		  
-- OUTPUT:
0.7833333333333332
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 20:35:43) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
h = 0
for i in range(n):
	h = h + ((-1)**i)*(1/(1+i))
print(h)	
		  
-- EXECUTION TIME:
0.80692
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
0.7833333333333332
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
0.6687714031754279
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 20:36:05) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
h = 0
for i in range(n):
	h = h + ((-1)**i)*(1/(1+i))
print(round(h, 6))	
		  
-- OUTPUT:
0.783333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 20:36:17) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
h = 0
for i in range(n):
	h = h + ((-1)**i)*(1/(1+i))
print(round(h, 6))	
		  
-- EXECUTION TIME:
0.737386
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
0.783333
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
0.668771
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 20:37:27) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
h = 0
for i in range(n):
	h = h + ((-1)**i)*(1/(1+i))
h = round(h, 6)
	print("H = ",h)	
		  
-- ERROR:
File "XXXX", line 6
    print("H = ",h)	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 20:37:38) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
h = 0
for i in range(n):
	h = h + ((-1)**i)*(1/(1+i))
h = round(h, 6)
print("H = ",h)	
		  
-- OUTPUT:
H =  0.783333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 20:37:47) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
h = 0
for i in range(n):
	h = h + ((-1)**i)*(1/(1+i))
h = round(h, 6)
print("H = ",h)	
		  
-- EXECUTION TIME:
0.655522
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
H =  0.783333
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
H =  0.668771
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
